Change spacing around button, fix getNum() let num = 0 has to be at the top, issue fixed

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 17 px;
-    height: 100vh;
+    /*justify-content: center; */
+    gap: 10px;
+    height: 100vh;  
+    padding: 10px;
     margin: 0;
 }
 
